--- a/stock-calculator.html
+++ b/stock-calculator.html
@@ -79,16 +79,25 @@
             <!-- Main Calculator -->
             <div class="xl:col-span-1">
                 <div class="bg-white rounded-xl card-shadow p-6">
-                    <div class="flex items-center mb-6">
-                        <div class="w-12 h-12 bg-blue-100 rounded-lg flex items-center justify-center mr-4">
-                            <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 11h.01M12 11h.01M9 11h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z"></path>
+                    <div class="flex items-center justify-between mb-6">
+                        <div class="flex items-center">
+                            <div class="w-12 h-12 bg-blue-100 rounded-lg flex items-center justify-center mr-4">
+                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 11h.01M12 11h.01M9 11h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z"></path>
+                                </svg>
+                            </div>
+                            <div>
+                                <h2 class="text-2xl font-bold text-gray-900">Stock Calculator</h2>
+                                <p class="text-gray-600">Calculate buy/sell returns with brokerage options</p>
+                            </div>
+                        </div>
+                        <button onclick="clearAll()" 
+                                class="p-3 text-gray-500 hover:text-gray-700 hover:bg-gray-100 rounded-lg transition-colors" 
+                                title="Reset all fields">
+                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
                             </svg>
-                        </div>
-                        <div>
-                            <h2 class="text-2xl font-bold text-gray-900">Stock Calculator</h2>
-                            <p class="text-gray-600">Calculate buy/sell returns with brokerage options</p>
-                        </div>
+                        </button>
                     </div>
 
                     <div class="space-y-4">
@@ -206,16 +215,6 @@
             </div>
         </div>
 
-        <!-- Quick Actions -->
-        <div class="mt-8 bg-white rounded-xl card-shadow p-6">
-            <h3 class="text-xl font-bold text-gray-900 mb-4">Quick Actions</h3>
-            <div class="flex justify-center">
-                <button onclick="clearAll()" 
-                        class="bg-gray-100 hover:bg-gray-200 text-gray-700 font-medium py-3 px-6 rounded-lg transition-colors">
-                    Clear All Fields
-                </button>
-            </div>
-        </div>
     </div>
 
     <script>
