--- a/target-price-manager.html
+++ b/target-price-manager.html
@@ -170,80 +170,80 @@
     <script>
         // Stock symbols for autocomplete (both .N and .N0000 formats)
         const STOCK_SYMBOLS = [
-            "JKH.N", "JKH.N0000", "COMB.N", "COMB.N0000", "COMB.X", "COMB.X0000", "CTC.N", "CTC.N0000", 
-            "DIST.N", "DIST.N0000", "LOLC.N", "LOLC.N0000", "DIAL.N", "DIAL.N0000", "MELS.N", "MELS.N0000", 
-            "HNB.N", "HNB.N0000", "HNB.X", "HNB.X0000", "CARG.N", "CARG.N0000", "LOFC.N", "LOFC.N0000", 
-            "SAMP.N", "SAMP.N0000", "CARS.N", "CARS.N0000", "HAYL.N", "HAYL.N0000", "CTHR.N", "CTHR.N0000", 
-            "LION.N", "LION.N0000", "SLTL.N", "SLTL.N0000", "CCS.N", "CCS.N0000", "VONE.N", "VONE.N0000",
-            "BIL.N", "BIL.N0000", "BUKI.N", "BUKI.N0000", "NTB.N", "NTB.N0000", "NTB.X", "NTB.X0000", 
-            "HHL.N", "HHL.N0000", "SINS.N", "SINS.N0000", "LFIN.N", "LFIN.N0000", "CINS.N", "CINS.N0000", 
-            "CINS.X", "CINS.X0000", "DFCC.N", "DFCC.N0000", "CFIN.N", "CFIN.N0000", "LIOC.N", "LIOC.N0000", 
-            "SPEN.N", "SPEN.N0000", "AEL.N", "AEL.N0000", "CIC.N", "CIC.N0000", "CIC.X", "CIC.X0000", 
-            "NDB.N", "NDB.N0000", "SUN.N", "SUN.N0000", "PLC.N", "PLC.N0000", "SEYB.N", "SEYB.N0000",
-            "SEYB.X", "SEYB.X0000", "GLAS.N", "GLAS.N0000", "RICH.N", "RICH.N0000", "BREW.N", "BREW.N0000", 
-            "SFCL.N", "SFCL.N0000", "RCL.N", "RCL.N0000", "ACL.N", "ACL.N0000", "OSEA.N", "OSEA.N0000", 
-            "PKME.N", "PKME.N0000", "GREG.N", "GREG.N0000", "UAL.N", "UAL.N0000", "COCR.N", "COCR.N0000", 
-            "WATA.N", "WATA.N0000", "LLUB.N", "LLUB.N0000", "DIPD.N", "DIPD.N0000", "WIND.N", "WIND.N0000", 
-            "AHUN.N", "AHUN.N0000", "ASIR.N", "ASIR.N0000", "TKYO.N", "TKYO.N0000", "TKYO.X", "TKYO.X0000",
-            "BRWN.N", "BRWN.N0000", "KHL.N", "KHL.N0000", "CALH.N", "CALH.N0000", "PALM.N", "PALM.N0000", 
-            "TAP.N", "TAP.N0000", "HAYC.N", "HAYC.N0000", "PLR.N", "PLR.N0000", "TJL.N", "TJL.N0000", 
-            "PABC.N", "PABC.N0000", "RIL.N", "RIL.N0000", "AHPL.N", "AHPL.N0000", "VFIN.N", "VFIN.N0000", 
-            "JINS.N", "JINS.N0000", "LMF.N", "LMF.N0000", "KCAB.N", "KCAB.N0000", "CDB.N", "CDB.N0000", 
-            "CDB.X", "CDB.X0000", "CFVF.N", "CFVF.N0000", "UML.N", "UML.N0000", "GUAR.N", "GUAR.N0000",
-            "AAIC.N", "AAIC.N0000", "CTEA.N", "CTEA.N0000", "JAT.N", "JAT.N0000", "LAMB.N", "LAMB.N0000", 
-            "EDEN.N", "EDEN.N0000", "FCT.N", "FCT.N0000", "GRAN.N", "GRAN.N0000", "LHCL.N", "LHCL.N0000", 
-            "DIMO.N", "DIMO.N0000", "CFLB.N", "CFLB.N0000", "LGL.N", "LGL.N0000", "LGL.X", "LGL.X0000", 
-            "UBC.N", "UBC.N0000", "VLL.N", "VLL.N0000", "VLL.X", "VLL.X0000", "PAP.N", "PAP.N0000", 
-            "MGT.N", "MGT.N0000", "HUNA.N", "HUNA.N0000", "HNBF.N", "HNBF.N0000", "HNBF.X", "HNBF.X0000",
-            "CALT.N", "CALT.N0000", "EBCR.N", "EBCR.N0000", "KHC.N", "KHC.N0000", "ABL.N", "ABL.N0000", 
-            "HASU.N", "HASU.N0000", "LWL.N", "LWL.N0000", "SIRA.N", "SIRA.N0000", "ELPL.N", "ELPL.N0000", 
-            "NAMU.N", "NAMU.N0000", "TILE.N", "TILE.N0000", "TAFL.N", "TAFL.N0000", "TRAN.N", "TRAN.N0000", 
-            "MAL.N", "MAL.N0000", "MAL.X", "MAL.X0000", "SFIN.N", "SFIN.N0000", "ALLI.N", "ALLI.N0000", 
-            "ALUM.N", "ALUM.N0000", "VPEL.N", "VPEL.N0000", "JETS.N", "JETS.N0000", "PARQ.N", "PARQ.N0000",
-            "CINV.N", "CINV.N0000", "ASHO.N", "ASHO.N0000", "NHL.N", "NHL.N0000", "AGPL.N", "AGPL.N0000", 
-            "SERV.N", "SERV.N0000", "GHLL.N", "GHLL.N0000", "LGIL.N", "LGIL.N0000", "BFN.N", "BFN.N0000", 
-            "SHOT.N", "SHOT.N0000", "SHOT.X", "SHOT.X0000", "AGAL.N", "AGAL.N0000", "RCH.N", "RCH.N0000", 
-            "CALF.N", "CALF.N0000", "NEH.N", "NEH.N0000", "SHL.N", "SHL.N0000", "UBF.N", "UBF.N0000", 
-            "HARI.N", "HARI.N0000", "CBNK.N", "CBNK.N0000", "DOCK.N", "DOCK.N0000", "CHOT.N", "CHOT.N0000",
-            "EAST.N", "EAST.N0000", "CLND.N", "CLND.N0000", "BOGA.N", "BOGA.N0000", "LVEF.N", "LVEF.N0000", 
-            "TPL.N", "TPL.N0000", "SDB.N", "SDB.N0000", "PINS.N", "PINS.N0000", "TAJ.N", "TAJ.N0000", 
-            "AAF.N", "AAF.N0000", "AAF.P", "AAF.P0000", "MERC.N", "MERC.N0000", "CHL.N", "CHL.N0000", 
-            "CHL.X", "CHL.X0000", "AMF.N", "AMF.N0000", "RWSL.N", "RWSL.N0000", "COOP.N", "COOP.N0000", 
-            "TYRE.N", "TYRE.N0000", "BOPL.N", "BOPL.N0000", "CSLK.N", "CSLK.N0000", "COLO.N", "COLO.N0000",
-            "HPL.N", "HPL.N0000", "AMSL.N", "AMSL.N0000", "SMOT.N", "SMOT.N0000", "APLA.N", "APLA.N0000", 
-            "KVAL.N", "KVAL.N0000", "PMB.N", "PMB.N0000", "ODEL.N", "ODEL.N0000", "MASK.N", "MASK.N0000", 
-            "BFL.N", "BFL.N0000", "BPPL.N", "BPPL.N0000", "LCBF.N", "LCBF.N0000", "RHL.N", "RHL.N0000", 
-            "RHL.X", "RHL.X0000", "ABAN.N", "ABAN.N0000", "RENU.N", "RENU.N0000", "ASCO.N", "ASCO.N0000", 
-            "LPL.N", "LPL.N0000", "LPL.X", "LPL.X0000", "CIND.N", "CIND.N0000", "SOY.N", "SOY.N0000",
-            "SCAP.N", "SCAP.N0000", "LCEY.N", "LCEY.N0000", "SEMB.N", "SEMB.N0000", "SEMB.X", "SEMB.X0000", 
-            "HELA.N", "HELA.N0000", "CRL.N", "CRL.N0000", "CARE.N", "CARE.N0000", "JKL.N", "JKL.N0000", 
-            "AFSL.N", "AFSL.N0000", "PACK.N", "PACK.N0000", "BALA.N", "BALA.N0000", "MBSL.N", "MBSL.N0000", 
-            "LDEV.N", "LDEV.N0000", "HUNT.N", "HUNT.N0000", "ATL.N", "ATL.N0000", "CONN.N", "CONN.N0000", 
-            "LVEN.N", "LVEN.N0000", "SDF.N", "SDF.N0000", "ONAL.N", "ONAL.N0000", "SHAW.N", "SHAW.N0000",
-            "CWM.N", "CWM.N0000", "AGST.N", "AGST.N0000", "AGST.X", "AGST.X0000", "RAL.N", "RAL.N0000", 
-            "COCO.N", "COCO.N0000", "COCO.X", "COCO.X0000", "KFP.N", "KFP.N0000", "PHAR.N", "PHAR.N0000", 
-            "STAF.N", "STAF.N0000", "REXP.N", "REXP.N0000", "LHL.N", "LHL.N0000", "RPBH.N", "RPBH.N0000", 
-            "CSD.N", "CSD.N0000", "HPWR.N", "HPWR.N0000", "RHTL.N", "RHTL.N0000", "SINH.N", "SINH.N0000", 
-            "LALU.N", "LALU.N0000", "UDPL.N", "UDPL.N0000", "BBH.N", "BBH.N0000", "KGAL.N", "KGAL.N0000",
-            "HAPU.N", "HAPU.N0000", "HBS.N", "HBS.N0000", "KZOO.N", "KZOO.N0000", "KOTA.N", "KOTA.N0000", 
-            "LITE.N", "LITE.N0000", "DPL.N", "DPL.N0000", "CABO.N", "CABO.N0000", "CTLD.N", "CTLD.N0000", 
-            "CHMX.N", "CHMX.N0000", "MARA.N", "MARA.N0000", "TANG.N", "TANG.N0000", "COMD.N", "COMD.N0000", 
-            "REEF.N", "REEF.N0000", "HDFC.N", "HDFC.N0000", "BERU.N", "BERU.N0000", "CIT.N", "CIT.N0000", 
-            "CFI.N", "CFI.N0000", "WAPO.N", "WAPO.N0000", "ETWO.N", "ETWO.N0000", "ASIY.N", "ASIY.N0000",
-            "ATLL.N", "ATLL.N0000", "AINS.N", "AINS.N0000", "KAHA.N", "KAHA.N0000", "MADU.N", "MADU.N0000", 
-            "HEXP.N", "HEXP.N0000", "SWAD.N", "SWAD.N0000", "HSIG.N", "HSIG.N0000", "PEG.N", "PEG.N0000", 
-            "CITW.N", "CITW.N0000", "CITH.N", "CITH.N0000", "AUTO.N", "AUTO.N0000", "ECL.N", "ECL.N0000", 
-            "LUMX.N", "LUMX.N0000", "MCPL.N", "MCPL.N0000", "UCAR.N", "UCAR.N0000", "HPFL.N", "HPFL.N0000", 
-            "HOPL.N", "HOPL.N0000", "TSML.N", "TSML.N0000", "MSL.N", "MSL.N0000", "MFPE.N", "MFPE.N0000",
-            "CTBL.N", "CTBL.N0000", "ASPH.N", "ASPH.N0000", "SIL.N", "SIL.N0000", "BRR.N", "BRR.N0000", 
-            "KPHL.N", "KPHL.N0000", "EMER.N", "EMER.N0000", "SIGV.N", "SIGV.N0000", "TESS.N", "TESS.N0000", 
-            "TESS.X", "TESS.X0000", "MRH.N", "MRH.N0000", "CERA.N", "CERA.N0000", "AFS.N", "AFS.N0000", 
-            "MHDL.N", "MHDL.N0000", "RFL.N", "RFL.N0000", "LPRT.N", "LPRT.N0000", "HVA.N", "HVA.N0000", 
-            "CSF.N", "CSF.N0000", "MDL.N", "MDL.N0000", "SLND.N", "SLND.N0000", "ACME.N", "ACME.N0000",
-            "ACAP.N", "ACAP.N0000", "MULL.N", "MULL.N0000", "GEST.N", "GEST.N0000", "MEL.N", "MEL.N0000", 
-            "EXT.N", "EXT.N0000", "EML.N", "EML.N0000", "CWL.N", "CWL.N0000", "SING.N", "SING.N0000", 
-            "BLUE.N", "BLUE.N0000", "CPRT.N", "CPRT.N0000", "RGEM.N", "RGEM.N0000", "YORK.N", "YORK.N0000", 
-            "OFEQ.N", "OFEQ.N0000", "PARA.N", "PARA.N0000"
+            "JKH.N", "JKH.N", "COMB.N", "COMB.N", "COMB.X", "COMB.X", "CTC.N", "CTC.N", 
+            "DIST.N", "DIST.N", "LOLC.N", "LOLC.N", "DIAL.N", "DIAL.N", "MELS.N", "MELS.N", 
+            "HNB.N", "HNB.N", "HNB.X", "HNB.X", "CARG.N", "CARG.N", "LOFC.N", "LOFC.N", 
+            "SAMP.N", "SAMP.N", "CARS.N", "CARS.N", "HAYL.N", "HAYL.N", "CTHR.N", "CTHR.N", 
+            "LION.N", "LION.N", "SLTL.N", "SLTL.N", "CCS.N", "CCS.N", "VONE.N", "VONE.N",
+            "BIL.N", "BIL.N", "BUKI.N", "BUKI.N", "NTB.N", "NTB.N", "NTB.X", "NTB.X", 
+            "HHL.N", "HHL.N", "SINS.N", "SINS.N", "LFIN.N", "LFIN.N", "CINS.N", "CINS.N", 
+            "CINS.X", "CINS.X", "DFCC.N", "DFCC.N", "CFIN.N", "CFIN.N", "LIOC.N", "LIOC.N", 
+            "SPEN.N", "SPEN.N", "AEL.N", "AEL.N", "CIC.N", "CIC.N", "CIC.X", "CIC.X", 
+            "NDB.N", "NDB.N", "SUN.N", "SUN.N", "PLC.N", "PLC.N", "SEYB.N", "SEYB.N",
+            "SEYB.X", "SEYB.X", "GLAS.N", "GLAS.N", "RICH.N", "RICH.N", "BREW.N", "BREW.N", 
+            "SFCL.N", "SFCL.N", "RCL.N", "RCL.N", "ACL.N", "ACL.N", "OSEA.N", "OSEA.N", 
+            "PKME.N", "PKME.N", "GREG.N", "GREG.N", "UAL.N", "UAL.N", "COCR.N", "COCR.N", 
+            "WATA.N", "WATA.N", "LLUB.N", "LLUB.N", "DIPD.N", "DIPD.N", "WIND.N", "WIND.N", 
+            "AHUN.N", "AHUN.N", "ASIR.N", "ASIR.N", "TKYO.N", "TKYO.N", "TKYO.X", "TKYO.X",
+            "BRWN.N", "BRWN.N", "KHL.N", "KHL.N", "CALH.N", "CALH.N", "PALM.N", "PALM.N", 
+            "TAP.N", "TAP.N", "HAYC.N", "HAYC.N", "PLR.N", "PLR.N", "TJL.N", "TJL.N", 
+            "PABC.N", "PABC.N", "RIL.N", "RIL.N", "AHPL.N", "AHPL.N", "VFIN.N", "VFIN.N", 
+            "JINS.N", "JINS.N", "LMF.N", "LMF.N", "KCAB.N", "KCAB.N", "CDB.N", "CDB.N", 
+            "CDB.X", "CDB.X", "CFVF.N", "CFVF.N", "UML.N", "UML.N", "GUAR.N", "GUAR.N",
+            "AAIC.N", "AAIC.N", "CTEA.N", "CTEA.N", "JAT.N", "JAT.N", "LAMB.N", "LAMB.N", 
+            "EDEN.N", "EDEN.N", "FCT.N", "FCT.N", "GRAN.N", "GRAN.N", "LHCL.N", "LHCL.N", 
+            "DIMO.N", "DIMO.N", "CFLB.N", "CFLB.N", "LGL.N", "LGL.N", "LGL.X", "LGL.X", 
+            "UBC.N", "UBC.N", "VLL.N", "VLL.N", "VLL.X", "VLL.X", "PAP.N", "PAP.N", 
+            "MGT.N", "MGT.N", "HUNA.N", "HUNA.N", "HNBF.N", "HNBF.N", "HNBF.X", "HNBF.X",
+            "CALT.N", "CALT.N", "EBCR.N", "EBCR.N", "KHC.N", "KHC.N", "ABL.N", "ABL.N", 
+            "HASU.N", "HASU.N", "LWL.N", "LWL.N", "SIRA.N", "SIRA.N", "ELPL.N", "ELPL.N", 
+            "NAMU.N", "NAMU.N", "TILE.N", "TILE.N", "TAFL.N", "TAFL.N", "TRAN.N", "TRAN.N", 
+            "MAL.N", "MAL.N", "MAL.X", "MAL.X", "SFIN.N", "SFIN.N", "ALLI.N", "ALLI.N", 
+            "ALUM.N", "ALUM.N", "VPEL.N", "VPEL.N", "JETS.N", "JETS.N", "PARQ.N", "PARQ.N",
+            "CINV.N", "CINV.N", "ASHO.N", "ASHO.N", "NHL.N", "NHL.N", "AGPL.N", "AGPL.N", 
+            "SERV.N", "SERV.N", "GHLL.N", "GHLL.N", "LGIL.N", "LGIL.N", "BFN.N", "BFN.N", 
+            "SHOT.N", "SHOT.N", "SHOT.X", "SHOT.X", "AGAL.N", "AGAL.N", "RCH.N", "RCH.N", 
+            "CALF.N", "CALF.N", "NEH.N", "NEH.N", "SHL.N", "SHL.N", "UBF.N", "UBF.N", 
+            "HARI.N", "HARI.N", "CBNK.N", "CBNK.N", "DOCK.N", "DOCK.N", "CHOT.N", "CHOT.N",
+            "EAST.N", "EAST.N", "CLND.N", "CLND.N", "BOGA.N", "BOGA.N", "LVEF.N", "LVEF.N", 
+            "TPL.N", "TPL.N", "SDB.N", "SDB.N", "PINS.N", "PINS.N", "TAJ.N", "TAJ.N", 
+            "AAF.N", "AAF.N", "AAF.P", "AAF.P0000", "MERC.N", "MERC.N", "CHL.N", "CHL.N", 
+            "CHL.X", "CHL.X", "AMF.N", "AMF.N", "RWSL.N", "RWSL.N", "COOP.N", "COOP.N", 
+            "TYRE.N", "TYRE.N", "BOPL.N", "BOPL.N", "CSLK.N", "CSLK.N", "COLO.N", "COLO.N",
+            "HPL.N", "HPL.N", "AMSL.N", "AMSL.N", "SMOT.N", "SMOT.N", "APLA.N", "APLA.N", 
+            "KVAL.N", "KVAL.N", "PMB.N", "PMB.N", "ODEL.N", "ODEL.N", "MASK.N", "MASK.N", 
+            "BFL.N", "BFL.N", "BPPL.N", "BPPL.N", "LCBF.N", "LCBF.N", "RHL.N", "RHL.N", 
+            "RHL.X", "RHL.X", "ABAN.N", "ABAN.N", "RENU.N", "RENU.N", "ASCO.N", "ASCO.N", 
+            "LPL.N", "LPL.N", "LPL.X", "LPL.X", "CIND.N", "CIND.N", "SOY.N", "SOY.N",
+            "SCAP.N", "SCAP.N", "LCEY.N", "LCEY.N", "SEMB.N", "SEMB.N", "SEMB.X", "SEMB.X", 
+            "HELA.N", "HELA.N", "CRL.N", "CRL.N", "CARE.N", "CARE.N", "JKL.N", "JKL.N", 
+            "AFSL.N", "AFSL.N", "PACK.N", "PACK.N", "BALA.N", "BALA.N", "MBSL.N", "MBSL.N", 
+            "LDEV.N", "LDEV.N", "HUNT.N", "HUNT.N", "ATL.N", "ATL.N", "CONN.N", "CONN.N", 
+            "LVEN.N", "LVEN.N", "SDF.N", "SDF.N", "ONAL.N", "ONAL.N", "SHAW.N", "SHAW.N",
+            "CWM.N", "CWM.N", "AGST.N", "AGST.N", "AGST.X", "AGST.X", "RAL.N", "RAL.N", 
+            "COCO.N", "COCO.N", "COCO.X", "COCO.X", "KFP.N", "KFP.N", "PHAR.N", "PHAR.N", 
+            "STAF.N", "STAF.N", "REXP.N", "REXP.N", "LHL.N", "LHL.N", "RPBH.N", "RPBH.N", 
+            "CSD.N", "CSD.N", "HPWR.N", "HPWR.N", "RHTL.N", "RHTL.N", "SINH.N", "SINH.N", 
+            "LALU.N", "LALU.N", "UDPL.N", "UDPL.N", "BBH.N", "BBH.N", "KGAL.N", "KGAL.N",
+            "HAPU.N", "HAPU.N", "HBS.N", "HBS.N", "KZOO.N", "KZOO.N", "KOTA.N", "KOTA.N", 
+            "LITE.N", "LITE.N", "DPL.N", "DPL.N", "CABO.N", "CABO.N", "CTLD.N", "CTLD.N", 
+            "CHMX.N", "CHMX.N", "MARA.N", "MARA.N", "TANG.N", "TANG.N", "COMD.N", "COMD.N", 
+            "REEF.N", "REEF.N", "HDFC.N", "HDFC.N", "BERU.N", "BERU.N", "CIT.N", "CIT.N", 
+            "CFI.N", "CFI.N", "WAPO.N", "WAPO.N", "ETWO.N", "ETWO.N", "ASIY.N", "ASIY.N",
+            "ATLL.N", "ATLL.N", "AINS.N", "AINS.N", "KAHA.N", "KAHA.N", "MADU.N", "MADU.N", 
+            "HEXP.N", "HEXP.N", "SWAD.N", "SWAD.N", "HSIG.N", "HSIG.N", "PEG.N", "PEG.N", 
+            "CITW.N", "CITW.N", "CITH.N", "CITH.N", "AUTO.N", "AUTO.N", "ECL.N", "ECL.N", 
+            "LUMX.N", "LUMX.N", "MCPL.N", "MCPL.N", "UCAR.N", "UCAR.N", "HPFL.N", "HPFL.N", 
+            "HOPL.N", "HOPL.N", "TSML.N", "TSML.N", "MSL.N", "MSL.N", "MFPE.N", "MFPE.N",
+            "CTBL.N", "CTBL.N", "ASPH.N", "ASPH.N", "SIL.N", "SIL.N", "BRR.N", "BRR.N", 
+            "KPHL.N", "KPHL.N", "EMER.N", "EMER.N", "SIGV.N", "SIGV.N", "TESS.N", "TESS.N", 
+            "TESS.X", "TESS.X", "MRH.N", "MRH.N", "CERA.N", "CERA.N", "AFS.N", "AFS.N", 
+            "MHDL.N", "MHDL.N", "RFL.N", "RFL.N", "LPRT.N", "LPRT.N", "HVA.N", "HVA.N", 
+            "CSF.N", "CSF.N", "MDL.N", "MDL.N", "SLND.N", "SLND.N", "ACME.N", "ACME.N",
+            "ACAP.N", "ACAP.N", "MULL.N", "MULL.N", "GEST.N", "GEST.N", "MEL.N", "MEL.N", 
+            "EXT.N", "EXT.N", "EML.N", "EML.N", "CWL.N", "CWL.N", "SING.N", "SING.N", 
+            "BLUE.N", "BLUE.N", "CPRT.N", "CPRT.N", "RGEM.N", "RGEM.N", "YORK.N", "YORK.N", 
+            "OFEQ.N", "OFEQ.N", "PARA.N", "PARA.N"
         ];
 
         // Utility functions
